--- a/src/app/shared/components/product-dialog/product-dialog.component.html
+++ b/src/app/shared/components/product-dialog/product-dialog.component.html
@@ -291,50 +291,109 @@
           <i class="pi pi-camera"></i>
           <span class="ml-2">Imágenes</span>
         </ng-template>
-        <div class="upload-card">
-          <p-fileUpload
-            name="imagenes[]"
-            accept="image/*"
-            maxFileSize="5000000"
-            [multiple]="true"
-            [customUpload]="true"
-            (onSelect)="onFileSelect($event)"
-            class="w-full"
-          >
-            <ng-template pTemplate="empty">
-              <div class="upload-empty text-center p-6">
-                <i class="pi pi-cloud-upload text-5xl text-gray-400"></i>
-                <h4 class="mt-2 font-semibold">Sube tu imagen</h4>
-                <p class="text-sm text-gray-500">
-                  Arrastra y suelta o haz click en
-                  <b>"Seleccionar"</b>
-                </p>
-                <div class="text-xs text-gray-400 mt-1">
-                  JPG, PNG, WebP • Máximo 5MB
-                </div>
-              </div>
-            </ng-template>
 
-            <ng-template
-              pTemplate="content"
-              let-files
-              let-removeFileCallback="removeFileCallback"
-            >
-             <div class="grid gap-4 sm:grid-cols-2 md:grid-cols-3 mt-4" *ngIf="preview.length > 0">
-  <div *ngFor="let img of preview; let i = index" class="relative">
-    <img [src]="img" alt="preview" class="w-full h-40 object-cover rounded-lg border" />
-    <button
-      type="button"
-      pButton
-      icon="pi pi-times"
-      class="absolute top-2 right-2 p-button-rounded p-button-danger p-button-sm"
-      (click)="removeFile(i)"
-    ></button>
-  </div>
-</div>
-            </ng-template>
-          </p-fileUpload>
+       <div class="card">
+  <p-toast></p-toast>
+  <p-fileUpload
+    name="imagenes[]"
+    accept="image/*"
+    [multiple]="true"
+    [customUpload]="true"
+    maxFileSize="5000000"
+    (onSelect)="onFileSelect($event)"
+    [showUploadButton]="false"
+    [showCancelButton]="false"
+    class="w-full"
+  >
+    <!-- Toolbar -->
+    <ng-template #header let-files let-chooseCallback="chooseCallback" let-clearCallback="clearCallback">
+      <div class="flex flex-wrap justify-between items-center flex-1 gap-4">
+        <div class="flex gap-2">
+          <p-button
+            (click)="chooseCallback()"
+            icon="pi pi-images"
+            [rounded]="true"
+            [outlined]="true"
+            label="Seleccionar"
+          ></p-button>
+          <p-button
+            (click)="clearCallback()"
+            icon="pi pi-times"
+            [rounded]="true"
+            [outlined]="true"
+            severity="danger"
+            [disabled]="!files || files.length === 0"
+          ></p-button>
         </div>
+        <p-progressBar
+          [value]="totalSizePercent"
+          [showValue]="false"
+          class="w-full md:w-64 h-1"
+        ></p-progressBar>
+      </div>
+    </ng-template>
+
+    <!-- Content: previews -->
+<ng-template pTemplate="content">
+  <div class="grid gap-4 sm:grid-cols-3 mt-4">
+    <ng-container *ngFor="let url of preview; let i = index">
+      <div
+        *ngIf="url as img"
+        class="relative w-full h-40 rounded-lg overflow-hidden border bg-white shadow-sm"
+      >
+        <img [src]="img" alt="Imagen producto" class="w-full h-full object-cover" />
+
+        <!-- eliminar -->
+        <button
+          type="button"
+          class="absolute top-1 right-1 w-7 h-7 rounded-full bg-white/90 hover:bg-white text-rose-600 border shadow flex items-center justify-center"
+          (click)="removeFile(i)"
+        >
+          <i class="pi pi-times text-xs"></i>
+        </button>
+
+        <!-- editar -->
+        <button
+          type="button"
+          class="absolute bottom-1 right-1 w-7 h-7 rounded-full bg-white/90 hover:bg-white text-slate-700 border shadow flex items-center justify-center"
+          (click)="editSlot(i)"
+        >
+          <i class="pi pi-pencil text-xs"></i>
+        </button>
+      </div>
+
+      <!-- mostrar slot vacío si no hay imagen -->
+      <div
+        *ngIf="!url"
+        class="relative w-full h-40 rounded-lg border-dashed border-2 border-slate-300 flex items-center justify-center cursor-pointer"
+        (click)="editSlot(i)"
+      >
+        <i class="pi pi-camera text-slate-400 text-xl"></i>
+      </div>
+    </ng-container>
+  </div>
+</ng-template>
+
+
+    <!-- Empty state -->
+    <ng-template #empty>
+      <div class="flex items-center justify-center flex-col p-6">
+        <i class="pi pi-cloud-upload border-2 rounded-full p-8 text-4xl text-gray-400"></i>
+        <p class="mt-6 mb-0">Arrastra y suelta o usa el botón para subir imágenes</p>
+      </div>
+    </ng-template>
+  </p-fileUpload>
+
+  <!-- Input oculto para editar un slot puntual -->
+  <input
+    #slotFileInput
+    type="file"
+    accept="image/*"
+    class="hidden"
+    (change)="onSlotFileChange($event)"
+  />
+</div>
+
       </p-tabPanel>
     </p-tabView>
 
